give the option to export product trees
